--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,11 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/jasmine": "^4.3.1",
+    "@types/jest": "^29.5.1",
+    "@types/mocha": "^10.0.1",
+    "jasmine-core": "^4.6.0",
+    "jest": "^29.5.0",
     "typescript": "~4.9.4"
   }
 }
