--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +16,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.0.5"
+    "mongoose": "^7.0.5",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
