--- a/client/angular.json
+++ b/client/angular.json
@@ -55,6 +55,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
+              "./node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.scss"
             ],
             "scripts": []
