--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,24 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha './test/*.js'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.4",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "q": "^1.5.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
