--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,29 @@
     "body-parser": "^1.20.2",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mocha": "^10.2.0",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.5",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oauth20-with-people-api": "^2.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "q": "^1.5.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^18.15.13",
+    "@types/passport": "^1.0.12",
+    "@types/passport-google-oauth20": "^2.0.11",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
