--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,12 +6,12 @@
        "noImplicitAny": true,
        "moduleResolution": "node",
        "sourceMap": true,
-       "outDir": "dist",
        "baseUrl": ".",
        "allowJs": true,
        "paths": {
            "*": ["node_modules/*"]
        }
    },
-   "include": ["src/**/*"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules"]
 }
