--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node src/server.js",
+    "start": "npm run build && node dist/server.js",
     "test": "mocha './test/*.js'"
   },
   "keywords": [],
